Primer Commit task1 js

--- a/game_info.html
+++ b/game_info.html
@@ -42,9 +42,9 @@
     </article>
     <main>
         <section>
+            <span><b> Fall Schedule</b></span>
             <div class="container_tab">
                 <table>
-                    <caption>Fall Schedule</caption>
                     <thead>
                         <tr>
                             <th class="primercol">SEPTEMBER</th>
